--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,106 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+  /* background-color: aquamarine; */
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+/*
+ header
+ */
+
+header {
+  display: flex;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px 3% ;
+  color: hsl(0, 0%, 75%);
+  font-weight: 700;
+  font-size: 16px;
+  align-self: center;
+  /* gap: 20px; */
 }
+
+
+.logo {  /* logo */
+  cursor: pointer;
+}
+
+/* features pricing resoures */
+.nav-bar{
+  margin-right: auto;
+  margin-left: 20px;
+}
+.nav-list{
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+}
+.nav-list li{
+  display: inline-block;
+  padding: 0px 25px 0px ;
+}
+/* items of list */
+.items{
+  transition: all 0.3s ease-in-out;
+}
+.items:hover{
+  color: hsl(257, 7%, 63%);
+}
+
+
+/* button */
+.nav-bar-button button {
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: auto;
+}
+
+.login{
+  color: hsl(0, 0%, 75%);
+  width: 95px;
+  height: 40px;
+  border: 0;
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255);
+  transition: all 0.3s ease-in-out;
+}
+.login:hover{
+  color: hsl(257, 7%, 63%);
+  width: 100px;
+  background-color: rgb(255, 255, 255);
+}
+
+.sign_up{
+  background-color: hsl(180, 66%, 49%);
+  color: hsl(0, 0%, 100%);
+  border: 0;
+  border-radius: 20px;
+  width: 95px;
+  height: 40px;
+  transition: all 0.3s ease-in-out;
+}
+.sign_up:hover{
+  background-color: hsl(180, 73%, 49%);
+  /* color: hsla(180, 64%, 26%, 0.582); */
+  width: 97px;
+  height: 40px;
+  box-shadow: 0px 0px 12px 2px hsla(0, 0%, 0%, 0.1);
+}
+
+
+
+
+
+
+
+/*
+ intro
+  */
