--- a/src/index.css
+++ b/src/index.css
@@ -95,3 +95,52 @@ header {
 /*
  intro 
   */
+
+.intro{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: left;
+    background-color: hsl(180, 66%, 49%);
+    color: hsl(0, 0%, 100%);
+    font-weight: 700;
+    font-size: 16px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.img{
+    width: 40%;
+    height: 40%;
+    background-repeat: no-repeat;
+    order: 2;
+}
+.search_bar_img{
+    width: 40%;
+    height: 40%;
+    background-repeat: no-repeat;
+    order: 3;
+}
+
+.inside_text{
+    order: 1;
+    font-weight: 700;
+    /* font-size: 16px; */
+    padding-left: 20px;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    border: none;
+}
+.inside_text h1{
+    line-height: 4rem;
+    font-size: 70px;
+    font-weight: 700;
+    color: hsl(260, 8%, 14%);
+    padding: 0;
+}
+.quote{
+    color: hsl(260, 8%, 14%);
+    margin-top: 7rem;
+    word-wrap: break-word;
+}
