--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,16 @@
 
 header {
   display: flex;
+  margin-left: 5rem;
   /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */
   justify-content: flex-start;
   align-items: center;
   padding: 20px 3%;
   color: hsl(0, 0%, 75%);
   font-weight: 700;
-  font-size: 16px;
+  font-size: 20px;
   align-self: center;
+  flex-wrap: wrap;
   /* gap: 20px; */
 }
 
@@ -32,16 +34,18 @@ header {
 /* features pricing Resources */
 .nav-bar {
   margin-right: auto;
-  margin-left: 20px;
+  margin-left: 23px;
 }
 .nav-list {
   list-style: none;
   justify-content: center;
   align-items: center;
+    display: flex;
 }
 .nav-list li {
   display: inline-block;
-  padding: 0px 25px 0px;
+  padding: 0px 20px 0px;
+    /* margin: 0px 20px 0px; */
 }
 /* items of list */
 .items {
@@ -53,11 +57,12 @@ header {
 
 /* button */
 .nav-bar-button button {
+    /* display: inline; */
   border: none;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 17px;
   cursor: pointer;
-  margin-right: auto;
+  margin-right: 20px;
 }
 
 .login {
@@ -92,54 +97,124 @@ header {
 }
 
 /*
- intro 
-  */
+ intro
+ */
 
-.intro{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: left;
-    background-color: hsl(180, 66%, 49%);
-    color: hsl(0, 0%, 100%);
-    font-weight: 700;
-    font-size: 16px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.img{
-    width: 40%;
-    height: 40%;
-    background-repeat: no-repeat;
+ .intro{
+    display: grid;
+    grid-template-areas: 
+    "inside img"
+    "search img";
+    /* background-color: hsl(180, 73%, 49%); */
+    margin-left: 80px;
+    margin-right: 60px;
+    column-gap: 0px;
+  }
+  
+  .img{
+    grid-area: img;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
     order: 2;
-}
-.search_bar_img{
-    width: 40%;
-    height: 40%;
-    background-repeat: no-repeat;
+    overflow: hidden;
+  }
+  .search_bar_img{
+  margin-bottom: 9rem;
+  grid-area: search;
+    width: 88%;
+    height: 60px;
+    margin-left: 40px;
+    margin-top: 0rem;
+    padding-top: 0px;
+    /* padding-bottom: 1rem; */
     order: 3;
 }
 
 .inside_text{
-    order: 1;
-    font-weight: 700;
-    /* font-size: 16px; */
-    padding-left: 20px;
-    margin-top: auto;
-    margin-left: auto;
-    margin-right: auto;
-    align-items: center;
-    border: none;
+  margin-top: 130px;
+  grid-area: inside;
+  font-size: 20px;
+  font-weight: 500;
+  color: hsl(257, 7%, 63%);
+  word-spacing: 10px;
+  letter-spacing: 0.5px;
+  line-height: 1.7rem;
+  margin-left: 45px;
+  order: 1;
 }
-.inside_text h1{
-    line-height: 4rem;
-    font-size: 70px;
-    font-weight: 700;
-    color: hsl(260, 8%, 14%);
-    padding: 0;
-}
+/* .inside_text h1{
+} */
 .quote{
-    color: hsl(260, 8%, 14%);
-    margin-top: 7rem;
-    word-wrap: break-word;
+  color: hsl(260, 8%, 14%);
+  font-size: 76px;  
+    line-height: 96%;  
+    letter-spacing: 5px;
+    word-spacing: 0px; 
+    padding-top: 2rem;
+    padding-bottom: 1rem; 
+}
+
+
+
+
+
+
+/*
+ footer
+ */
+.footer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  color: rgb(255, 255, 255);
+  background-color: hsl(260, 8%, 14%);
+  padding: 20px;
+  font-size: 20px;
+  flex-wrap: wrap;
+  font-weight: 700;
+  gap: 5rem;
+}
+.footer p {
+  font-size: 15px;
+  font-weight: 500;
+  color: rgb(215, 214, 214);
+}
+.footer .logo {
+  cursor: pointer;
+  list-style: none;
+      margin-top: 50px;
+    margin-bottom: 50px;
+  /* width: px; */
+  /* height: 50%; */
+}
+.footer .logo li {
+  display: inline;
+  padding: 0px 10px 0px;
+}
+.footer .logo li img {
+  width: 30px;
+  height: 30px;
+}
+.footer :nth-child(1) {
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer :nth-child(2) {
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer :nth-child(3) {
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer :nth-child(4) {
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer li {
+  list-style: none;
+  padding: 0px 6px 0px;
+  font-weight: 500;
+  font-size: 13px;
+  color: hsl(0, 0%, 75%);
 }
