--- a/src/index.css
+++ b/src/index.css
@@ -218,3 +218,11 @@ header {
   font-size: 13px;
   color: hsl(0, 0%, 75%);
 }
+
+
+.attribution{
+  display: flex;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 10px;
+}
