--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
 * {
   font-family: "Poppins", sans-serif;
   /* background-color: aquamarine; */
@@ -40,12 +40,12 @@ header {
   list-style: none;
   justify-content: center;
   align-items: center;
-    display: flex;
+  display: flex;
 }
 .nav-list li {
   display: inline-block;
   padding: 0px 20px 0px;
-    /* margin: 0px 20px 0px; */
+  /* margin: 0px 20px 0px; */
 }
 /* items of list */
 .items {
@@ -57,7 +57,7 @@ header {
 
 /* button */
 .nav-bar-button button {
-    /* display: inline; */
+  /* display: inline; */
   border: none;
   font-weight: 700;
   font-size: 17px;
@@ -79,7 +79,8 @@ header {
   width: 100px;
   background-color: rgb(255, 255, 255);
 }
-.sign_up { /* sign up  */
+.sign_up {
+  /* sign up  */
   background-color: hsl(180, 66%, 49%);
   color: hsl(0, 0%, 100%);
   border: 0;
@@ -100,37 +101,37 @@ header {
  intro
  */
 
- .intro{
-    display: grid;
-    grid-template-areas: 
+.intro {
+  display: grid;
+  grid-template-areas:
     "inside img"
     "search img";
-    /* background-color: hsl(180, 73%, 49%); */
-    margin-left: 80px;
-    margin-right: 60px;
-    column-gap: 0px;
-  }
-  
-  .img{
-    grid-area: img;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-    order: 2;
-    overflow: hidden;
-  }
-  .search_bar_img{
-  margin-bottom: 9rem;
-  grid-area: search;
-    width: 88%;
-    height: 60px;
-    margin-left: 40px;
-    margin-top: 0rem;
-    padding-top: 0px;
-    /* padding-bottom: 1rem; */
-    order: 3;
+  /* background-color: hsl(180, 73%, 49%); */
+  margin-left: 80px;
+  margin-right: 60px;
+  column-gap: 0px;
 }
 
-.inside_text{
+.img {
+  grid-area: img;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  order: 2;
+  overflow: hidden;
+}
+.search_bar_img {
+  margin-bottom: 9rem;
+  grid-area: search;
+  width: 88%;
+  height: 60px;
+  margin-left: 40px;
+  margin-top: 0rem;
+  padding-top: 0px;
+  /* padding-bottom: 1rem; */
+  order: 3;
+}
+
+.inside_text {
   margin-top: 130px;
   grid-area: inside;
   font-size: 20px;
@@ -144,20 +145,15 @@ header {
 }
 /* .inside_text h1{
 } */
-.quote{
+.quote {
   color: hsl(260, 8%, 14%);
-  font-size: 76px;  
-    line-height: 96%;  
-    letter-spacing: 5px;
-    word-spacing: 0px; 
-    padding-top: 2rem;
-    padding-bottom: 1rem; 
+  font-size: 76px;
+  line-height: 96%;
+  letter-spacing: 5px;
+  word-spacing: 0px;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
 }
-
-
-
-
-
 
 /*
  footer
@@ -182,8 +178,8 @@ header {
 .footer .logo {
   cursor: pointer;
   list-style: none;
-      margin-top: 50px;
-    margin-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   /* width: px; */
   /* height: 50%; */
 }
@@ -219,10 +215,36 @@ header {
   color: hsl(0, 0%, 75%);
 }
 
-
-.attribution{
+.attribution {
   display: flex;
   justify-content: center;
   font-weight: 500;
   font-size: 10px;
+}
+
+/*
+ boost
+*/
+.boost {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  background-color: hsl(257, 27%, 26%);
+  padding: 20px;
+}
+.boost_text {
+  font-weight: 700;
+  color: hsl(0, 0%, 100%);
+
+  margin-left: 45px;
+}
+.bo {
+  font-size: 14px;
+  font-weight: 700;
+  width: 120px;
+  height: 40px;
+  border-radius: 20px;
 }
