--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,30 @@ header {
   box-shadow: 0px 0px 12px 2px hsla(0, 0%, 0%, 0.1);
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*
  intro
  */
@@ -106,7 +130,7 @@ header {
   grid-template-areas:
     "inside img"
     "search img";
-  /* background-color: hsl(180, 73%, 49%); */
+  background-color: hsl(180, 73%, 49%);
   margin-left: 80px;
   margin-right: 60px;
   column-gap: 0px;
@@ -234,12 +258,16 @@ header {
   gap: 20px;
   background-color: hsl(257, 27%, 26%);
   padding: 20px;
+  position: relative;
 }
 .boost_text {
   font-weight: 700;
   color: hsl(0, 0%, 100%);
-
   margin-left: 45px;
+}
+
+.boost img {
+  position: absolute;
 }
 .bo {
   font-size: 14px;
